apps/front/src/presentation/styles/global.scss
@import './colors.scss';
@import './fontSizes.scss';

* {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
    font-size: $fontMedium;
}

body {
    background-color: $light;
}

textarea:focus,
input:focus {
    outline: none;
}

button {
    cursor: pointer;
}

ul,
li {
    list-style: none;
}

